# tauri-updater

./: .eslintrc.json  .gitignore  README.md  package.json  renovate.json  tsup.config.ts  vitest.config.ts
.github/workflows/: build.yml  bump_version.yml  test.yml
example-app/: README.md  package.json  tsconfig.json  vite.config.ts
example-app/src/: index.html  main.ts
example-app/src-tauri/: Cargo.toml  tauri.conf.json
example-app/src-tauri/src/: main.rs
src/: index.ts
src/core/: bundle-manager.ts  channel-manager.ts  crypto.ts  debug-menu.ts  delay-manager.ts  device.ts  download-manager.ts  stats.ts  storage.ts  updater.ts
src/shared/: constants.ts  events.ts  types.ts
